--- a/styles/styles.css
+++ b/styles/styles.css
@@ -22,16 +22,6 @@ body{
     overflow: hidden;
     color: #121212;
 }
-footer{
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    height: 3vh;
-    padding-left:1rem;
-    font-size: 0.75rem;
-    background-color: rgb(255, 255, 255, 0);
-}
 strong { 
     font-weight: 900;
 }
@@ -54,6 +44,7 @@ nav{
 .desktop-nav{
     position: fixed;
     flex-direction: column;
+    overflow-y: scroll;
     border-right: 2px solid rgb(101, 101, 101, 0.33);
     width: 25vw;
     min-width: 350px;
@@ -81,8 +72,18 @@ nav{
     list-style: none;
     font-size: 1.33rem;
 }
+.nav-footer{
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    border-right: 2px solid rgb(101, 101, 101, 0.33);
+    height: 2vh;
+    width: max(350px, 25vw);
+    font-size: 0.75rem;
+    background-color: #FEFEFE;
+}
 /* LINKS ON NAVBAR */
-
 .nav-link{
     /* use flexbox to put icon inline with anchor */
     display: flex;
@@ -151,7 +152,16 @@ nav{
     text-decoration: none;
     transition: all 0.3 ease-in-out;
 }
-
+.hamburger-footer{
+    display: none;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 2vh;
+    text-align: center;
+    font-size: .75rem;
+}
 /* MAIN CONTENT */
 main{
     position: fixed;
@@ -232,6 +242,7 @@ main{
     color: #700070;
     transform: scale(1.1);
 }
+
 
 /* HAMBURGER ICON */
 .hamburger-icon{
